--- a/docs/css/stylelogin.css
+++ b/docs/css/stylelogin.css
@@ -71,8 +71,16 @@
         }
 
         .btn-cadastrar {
-            background-color: #333;
-            border: 1px solid red;
+            background-color: red;
+            border: 1px solid #333;
+            cursor: pointer;
+            font-size: 1em;
+            text-decoration: none;
+            display: block;
+            text-align: center;
+            padding: 10px;
+            margin-top: 10px;
+            border-radius: 5px;
         }
 
         .forgot-password {
