--- a/docs/css/styleindex.css
+++ b/docs/css/styleindex.css
@@ -1,8 +1,7 @@
 
     body {
         font-family: Arial, sans-serif;
-        
-        background-color: #d28a7f;
+        background-color: #e3edce;
         color: #333;
         margin: 0;
         padding: 0;
@@ -35,15 +34,21 @@
         display: flex;
         gap: 20px;
         margin-bottom: 20px;
+        margin-top: 40px;
     }
     .categoria, .card {
-        background-color: #fff;
-        padding: 15px;
-        border-radius: 8px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        flex: 1;
-        text-align: center;
-    }
+        
+            background-color: #fff;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            flex: 1;
+            text-align: center;
+            max-width: 30%; /* Ajuste a largura máxima conforme necessário */
+            margin: 0 auto; /* Centraliza o contêiner */
+        }
+        
+    
     .categoria img, .card img {
         width: 100%;
         height: auto;
@@ -66,3 +71,39 @@
         border-radius: 8px;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     }
+    .categoria img, .card img {
+        width: 80%; /* Ajuste de 100% para 80%, ou outro valor desejado */
+        height: auto;
+        max-width: 300px; /* Defina um limite máximo de largura, opcional */
+        border-radius: 8px;
+    }
+    .lasanha-container {
+        display: flex;
+        flex-direction: row; /* Alinha elementos lado a lado */
+        align-items: center; /* Centraliza verticalmente */
+        justify-content: space-between; /* Espaça os elementos */
+        margin: 45px 0; /* Ajuste a margem superior e inferior */
+        width: 100%; /* O contêiner vai ocupar toda a largura da página */
+        padding: 15px;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        background-color: #f9f9f9;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    
+    .lasanha-container img {
+        width: 35%; /* Diminuímos a largura da imagem para 35% */
+        height: auto;
+        border-radius: 8px;
+        margin-right: 20px; /* Espaçamento entre a imagem e o texto */
+    }
+    
+    .lasanha-container .texto {
+        flex: 1; /* O texto ocupa o restante do espaço disponível */
+        text-align: left;
+    }
+    
+    
+    
+    
+    
