--- a/docs/css/darkmode.css
+++ b/docs/css/darkmode.css
@@ -1,8 +1,6 @@
 /* Estilo do toggle */
 .toggle-container {
-    position: absolute;
-    top: 10px;
-    right: 5px;
+    
     display: flex;
     align-items: center;
     gap: 15px;
@@ -12,6 +10,7 @@
     font-size: 1em;
     font-weight: bold;
     color: #f5f5f5;
+    width: 50px;
 }
 
 .switch {
