--- a/docs/css/nav.css
+++ b/docs/css/nav.css
@@ -28,13 +28,16 @@ nav a {
 
 nav a.icon {
     background: #111;
-    display: block;
+    position: absolute;
+    top: 25px;
+    left: 50%;
+    transform: translate(-50%, -50%);
     margin: 0;
     padding-top: 10px;
-    top: 0;
     border: none;
-    justify-items: center;
+    
 }
+
 
 nav a.icon:hover {
     transition: 0.5s;
