--- a/docs/css/darkmode.css
+++ b/docs/css/darkmode.css
@@ -64,7 +64,7 @@ input:checked + .slider:before {
     color: #f5f5f5;
 }
 
-.dark-mode .categoria, .dark-mode .card, .dark-mode .lasanha-container {
+.dark-mode .categoria, .dark-mode .card, .dark-mode #lasanha-container {
     background-color: #333;
 }
 
@@ -97,5 +97,5 @@ input:checked + .slider:before {
 
 
 .dark-mode .links a:hover {
-    background-color: #333333; /* efeito de hover no modo escuro */
+    background-color: #333333; 
 }
