--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -6,7 +6,25 @@ body {
     padding: 0;
 }
 
-.categorias, .destaque, .receitas {
+a:link {
+    color: red;
+}
+#container a:visited {
+    color: inherit;
+    text-decoration: none;
+}
+a{
+    text-decoration: none;
+}
+
+
+
+#container{
+    font-size: 1em;
+    text-align: justify;
+}
+
+.categorias, .destaque, #receitas {
     display: flex;
     gap: 20px;
     margin-bottom: 20px;
@@ -31,7 +49,7 @@ body {
     border-radius: 8px;
 }
 
-.categorias h2, .destaque h2, .receitas h2 {
+.categorias h2, .destaque h2, #receitas h2 {
     margin-bottom: 10px;
 }
 
@@ -49,7 +67,7 @@ body {
     background-color: white;
     padding: 10px;
     border-radius: 8px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    
 }
 
 .categoria img, .card img {
@@ -59,7 +77,7 @@ body {
     border-radius: 8px;
 }
 
-.lasanha-container {
+#lasanha-container {
     display: flex;
     flex-direction: row; 
     align-items: center; 
@@ -73,14 +91,28 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.lasanha-container img {
+.card{
+    display: flex;
+    padding: auto;
+    margin: auto;
+    -moz-text-size-adjust: auto;
+    flex-wrap: wrap;
+}
+
+#lasanha-container img {
     width: 35%; 
     height: auto;
     border-radius: 8px;
     margin-right: 20px; 
 }
 
-.lasanha-container .texto {
+#lasanha-container .texto {
     flex: 1; 
     text-align: left;
+}
+
+
+.dark-mode .receitas-em-tendencia div {
+    background-color: #333;
+    border: none;
 }
