--- a/docs/css/carousel.css
+++ b/docs/css/carousel.css
@@ -36,6 +36,14 @@
     position: absolute;
     z-index: 5;
 }
+#prev svg, #next svg{
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2px;
+}
 #prev img, #next img{
     width: 35px;
     height: 35px;
@@ -76,7 +84,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    width: 300px;
+    width: 500px;
     text-align: center;
     padding: 16px;
 }
