--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -21,7 +21,6 @@ a{
 
 #container{
     font-size: 1em;
-    text-align: justify;
 }
 
 .categorias, .destaque, #receitas {
@@ -29,6 +28,11 @@ a{
     gap: 20px;
     margin-bottom: 20px;
     margin-top: 40px;
+}
+
+#receitas{
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .categoria, .card {
@@ -115,4 +119,55 @@ a{
 .dark-mode .receitas-em-tendencia div {
     background-color: #333;
     border: none;
+}
+
+/* CATEGORIAS */
+.icones-categorias{
+    display: flex;
+    justify-content: space-around;
+    margin: 0px 10%;
+    padding: 25px;
+    flex-wrap: wrap;
+}
+.img-categorias{
+    width: auto;
+    height: 50px;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+.card-categorias{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    width: 100px;
+    height: auto;
+}
+.card-categorias:visited {
+    color: black;
+}  
+.background-img-icone{
+    flex-direction: column;
+    background-color: white;
+    width: 120px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    border: #afafaf;
+    border-width: 1px;
+    border-style: solid;
+    margin: 15px;
+    padding: 10px 0px;
+    gap: 10px;
+}
+
+.dark-mode .background-img-icone{
+    background-color: #333;
+    border-color: black;
+}
+.background-img-icone:hover{
+    filter: invert(10%);
+    transition: 100ms;
 }
