--- a/docs/css/login.css
+++ b/docs/css/login.css
@@ -25,7 +25,7 @@ body {
 }
 
 .header {
-    background-color: red;
+    background-color: rgb(35, 137, 253);
     padding: 15px;
     text-align: center;
     border-top-left-radius: 8px;
@@ -71,7 +71,7 @@ body {
 button {
     margin-top: 50px;
     width: 100%;
-    background-color: red;
+    background-color: rgb(35, 137, 253);
     color: white;
     padding: 15px 0;
     font-size: 18px;
