--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -7,75 +7,34 @@ body {
 }
 
 a:link {
-    color: red;
+    color: inherit;
 }
+
 #container a:visited {
     color: inherit;
     text-decoration: none;
 }
-a{
+
+a {
     text-decoration: none;
 }
 
-
-
-#container{
-    font-size: 1em;
-}
-
-.categorias, .destaque, #receitas {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
-    margin-top: 40px;
-}
-
-#receitas{
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.categoria, .card {
-    
+.card {
     background-color: #fff;
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    flex: 1;
     text-align: center;
     max-width: 30%; 
-    margin: 0 auto; 
-}
-    
-.categoria img, .card img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
+    margin: 0 auto;
 }
 
-.categorias h2, .destaque h2, #receitas h2 {
-    margin-bottom: 10px;
+.card h2 {
+    font-size: 1.2em;
 }
 
-.destaque .texto {
-    text-align: left;
-}
-
-.receitas-em-tendencia {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-.receitas-em-tendencia div {
-    background-color: white;
-    padding: 10px;
-    border-radius: 8px;
-    
-}
-
-.categoria img, .card img {
-    width: 80%; 
+.card img {
+    width: 100%; 
     height: auto;
     max-width: 300px; 
     border-radius: 8px;
@@ -95,14 +54,6 @@ a{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.card{
-    display: flex;
-    padding: auto;
-    margin: auto;
-    -moz-text-size-adjust: auto;
-    flex-wrap: wrap;
-}
-
 #lasanha-container img {
     width: 35%; 
     height: auto;
@@ -116,10 +67,6 @@ a{
 }
 
 
-.dark-mode .receitas-em-tendencia div {
-    background-color: #333;
-    border: none;
-}
 
 /* CATEGORIAS */
 .icones-categorias{
