--- a/docs/css/carousel.css
+++ b/docs/css/carousel.css
@@ -54,7 +54,6 @@
     gap: 20px;
     overflow: hidden;
     transition: transform 0.5s ease;
-    width: 100%;
 }
 
 /*card do carroussel*/
@@ -72,7 +71,7 @@
     background-color: #333;
 }
 .card-carousel img {
-    width: 100%;
+    width: 500px;
     height: 250px;
     border-bottom: 1px solid #ddd;
 }
