--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -18,33 +18,60 @@ a:link {
 a {
     text-decoration: none;
 }
-
+#receitas {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5%;
+}
 .card {
     background-color: #fff;
-    padding: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
-    max-width: 30%; 
-    margin: 0 auto;
+    margin-bottom: 35px;
+    height: 200px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+}
+@media (min-width: 550px) {
+    #receitas {
+        display: flex;
+        flex-direction: row;
+        margin: 0 20%;
+        
+    }
+}
+.card-coluna{
+    display: block;
+    justify-content: center;
+    width: 180px;
+}
+
+.card-coluna{
+    display: block;
+    justify-content: center;
+    width: 180px;
 }
 
 .card h2 {
     font-size: 1.2em;
 }
 
-.card img {
-    width: 100%; 
-    height: auto;
-    max-width: 300px; 
-    border-radius: 8px;
+.card-img {
+    display: block;
+    width: 180px; 
+    height: 100px;
+    border-radius: 5px;
+    margin: 0 auto;
 }
 
 #lasanha-container {
     display: flex;
     flex-direction: row; 
     align-items: center; 
-    justify-content: space-between; 
+    justify-content: space-evenly; 
     margin: 45px 0; 
     width: 95%; 
     padding: 15px;
@@ -71,9 +98,9 @@ a {
 /* CATEGORIAS */
 .icones-categorias{
     display: flex;
-    justify-content: space-around;
-    margin: 0px 10%;
-    padding: 25px;
+    justify-content: center;
+    margin: 0 5px;
+    gap: 30px;
     flex-wrap: wrap;
 }
 .img-categorias{
