--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #e3edce;
@@ -67,39 +71,46 @@ a {
     margin: 0 auto;
 }
 
-#lasanha-container {
-    display: flex;
-    flex-direction: row; 
-    align-items: center; 
-    justify-content: space-evenly; 
-    margin: 45px 0; 
-    width: 95%; 
-    padding: 15px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+/* HERO IMAGE */
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 1)), url('../bannerIA.png');
+    height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    margin: 10px 0 10px 0;
 }
 
-#lasanha-container img {
-    width: 35%; 
-    height: auto;
-    border-radius: 8px;
-    margin-right: 20px; 
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
 
-#lasanha-container .texto {
-    flex: 1; 
-    text-align: left;
+.hero-image a {
+    text-decoration: none;
 }
 
-
-
+.hero-image button {
+    width: 150px;
+    background-color: rgb(35, 137, 253);
+    color: white;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+}
 /* CATEGORIAS */
 .icones-categorias{
     display: flex;
     justify-content: center;
-    margin: 0 5px;
     gap: 30px;
     flex-wrap: wrap;
 }
