--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -86,6 +86,7 @@ a {
 .hero-text {
     text-align: center;
     position: absolute;
+    width: 95%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
