--- a/docs/css/login.css
+++ b/docs/css/login.css
@@ -115,7 +115,7 @@ form {
 input {
 	border-radius: 5px;
     background-color: #FFFFFF;
-    color: white;
+    color: black;
 	border: none;
 	padding: 12px 15px;
 	margin: 8px 0;
