--- a/docs/css/login.css
+++ b/docs/css/login.css
@@ -246,7 +246,7 @@ input {
 #button-back{
     position: absolute;
     top: 10px;
-    left: 20px;
+    left: 10px;
     display: flex;
     align-items: center;
     background-color: #444;
@@ -256,13 +256,13 @@ input {
     font-size: 1.2em;
     font-weight: bold;
     color: #f5f5f5;
-    width: 100px;
+    width: 120px;
     margin: 0;
     height: 35px;
 }
 
 #button-back span{
-    margin: 5px;
+    margin-left: -40px;
 }
 
 #button-back:hover{
